# BasicCppProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: flags.h  logger.h
src/: logger.cc  main.cc
